syntax = "proto3";

package grpc;

service grpc_store {
    //index-client
    rpc BatchWrite(WriteBatch) returns (Nothing);
    rpc QueryPages(IndexQuery) returns (stream ReadBatch);

    //storage-client
    rpc PutChunks(Chunks) returns (Nothing);
    // In GetChunks rpc request send buf as nil
    rpc GetChunks(Chunks) returns (stream Chunks);
    rpc DeleteChunks(ChunkID) returns (Nothing);

    //table-client
    rpc ListTables(Nothing) returns (ListTablesResponse);
    rpc CreateTable(TableDesc) returns (Nothing);
    rpc DeleteTable(TableName) returns (Nothing);
    rpc DescribeTable(TableName) returns (DescribeTableResponse);
    rpc UpdateTable(UpdateTableRequest) returns (Nothing);

    //used by storage-client & index-client
    rpc Stop(Nothing) returns (Nothing);
}

message Chunks {
    repeated Chunk chunks = 1;
}

message Chunk {
    bytes buf         = 1;
    string key        = 2;
    string tableName  = 3;
}

message ChunksResponse {
    repeated ChunkResponse chunks = 1;
}

message ChunkResponse {
    bytes buf       = 2;
}

message Nothing {}

message ChunkID {
    string chunkId = 1;
}

message TableName {
    string tableName = 1;
}

message WriteBatch {
    repeated IndexEntry indexEntry = 1;
}

message ReadBatch {
    repeated Row rows = 1;
}

message Row {
    bytes rangeValue = 1;
    bytes value      = 2;
}

message IndexEntry {
    string tableName = 1;
    string hashValue = 2;
    bytes rangeValue = 3;
    bytes value      = 4;
}

message IndexQuery {
    string tableName          = 1;
    string hashValue          = 2;
    bytes rangeValuePrefix    = 3;
    bytes rangeValueStart     = 4;
    bytes valueEqual          = 5;
    bool immutable            = 6;
}

message UpdateTableRequest {
    TableDesc current  = 1;
    TableDesc expected = 2;
}

message DescribeTableResponse {
    TableDesc desc  = 1;
    bool isActive   = 2;
}

message TableDesc {
    string name                  = 1;
    bool useOnDemandIOMode       = 2;
    int64 provisionedRead        = 3;
    int64 provisionedWrite       = 4;
    map<string, string> tags     = 5;
}

message ListTablesResponse {
    repeated string tables = 1;
}

message Labels {
    string name  = 1;
    string value = 2;
}


